--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# MacOS
+.DS_Store
+
+# Large Data
+ccrs*.bed.gz
+ccrs*.bed.gz.tbi
+gencode*.gz
+gencode*.gz.tbi
+
